--- a/JobPortal/front-end/src/css/homepage.css
+++ b/JobPortal/front-end/src/css/homepage.css
@@ -1,10 +1,10 @@
-/* .header {
+.header {
   display: flex;
   width: 100%;
   gap: 20px;
   flex-wrap: wrap;
   justify-content: space-between;
-} */
+}
 
 @media (max-width: 991px) {
   .header {
