--- a/JobPortal/front-end/src/css/homepage.css
+++ b/JobPortal/front-end/src/css/homepage.css
@@ -415,3 +415,157 @@
     margin-top: 40px;
   }
 }
+
+.aboutContainer {
+  gap: 20px;
+  display: flex;
+}
+
+@media (max-width: 991px) {
+  .about-container {
+    flex-direction: column;
+    align-items: stretch;
+    gap: 0;
+  }
+}
+
+.imageColumn {
+  display: flex;
+  flex-direction: column;
+  line-height: normal;
+  width: 57%;
+  margin-left: 0;
+}
+
+@media (max-width: 991px) {
+  .imageColumn {
+    width: 100%;
+  }
+}
+
+.aboutImage {
+  aspect-ratio: 1.07;
+  object-fit: contain;
+  object-position: center;
+  width: 100%;
+  flex-grow: 1;
+}
+
+@media (max-width: 991px) {
+  .aboutImage {
+    max-width: 100%;
+    margin-top: 40px;
+  }
+}
+
+.contentColumn {
+  display: flex;
+  flex-direction: column;
+  line-height: normal;
+  width: 43%;
+  margin-left: 20px;
+}
+
+@media (max-width: 991px) {
+  .contentColumn {
+    width: 100%;
+  }
+}
+
+.contentWrapper {
+  display: flex;
+  flex-direction: column;
+  align-self: stretch;
+  letter-spacing: 0.34px;
+  margin: auto 0;
+  font: 17px Hind Vadodara, sans-serif;
+}
+
+@media (max-width: 991px) {
+  .contentWrapper {
+    max-width: 100%;
+    margin-top: 40px;
+  }
+}
+
+.textContent {
+  display: flex;
+  flex-direction: column;
+  color: rgba(51, 27, 59, 0.66);
+  font-weight: 400;
+  line-height: 25px;
+  padding: 0 1px;
+}
+
+@media (max-width: 991px) {
+  .textContent {
+    max-width: 100%;
+  }
+}
+
+.aboutTitle {
+  color: rgba(37, 50, 75, 1);
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 51px;
+  letter-spacing: -0.48px;
+  align-self: start;
+}
+
+@media (max-width: 991px) {
+  .aboutTitle {
+    font-size: 40px;
+    line-height: 47px;
+  }
+}
+
+.aboutDescription {
+  margin-top: 15px;
+}
+
+@media (max-width: 991px) {
+  .aboutDescription {
+    max-width: 100%;
+  }
+}
+
+.aboutServices {
+  margin-top: 24px;
+}
+
+@media (max-width: 991px) {
+  .aboutServices {
+    max-width: 100%;
+    margin-right: 3px;
+  }
+}
+
+.exploreButton {
+  border-radius: 10px;
+  background-color: rgba(70, 64, 222, 1);
+  align-self: start;
+  margin-top: 35px;
+  color: rgba(255, 255, 255, 1);
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: 1;
+  padding: 22px 41px;
+}
+
+@media (max-width: 991px) {
+  .exploreButton {
+    padding: 22px 20px;
+  }
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
